# cursormate

./: Cargo.toml  README.md  README_EN.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs  process.rs  telemetry.rs
